--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -1,9 +1,11 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>                           
-<script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
+<!--<script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>-->
 {{ if isset .Site.Params "address" }}
 <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ .Site.Params.GoogleMapsAPIKey }}&libraries=places&callback=initialize"></script>
-<script src="/js/main.js"></script>
-<script src="/js/autocomplete.js"></script>
+<!--<script src="/js/main.js"></script>-->
+<!--<script src="/js/autocomplete.js"></script>-->
+<script src="/js/scroll.js"></script>
 <script src="/js/map.js"></script>
 {{ end }}
 
