--- a/static/css/main.css
+++ b/static/css/main.css
@@ -356,6 +356,11 @@ nav {
   vertical-align: center;
   margin-right: 20px;
 }
+.paypal-button {
+    float: right;
+    margin-bottom: 15px;
+    margin-right: 30px;
+}
 .call-action-area .call-action-link,
 .btn,
 .button {
