Adding thank you modal for people coming back from Paypal

--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -7,8 +7,10 @@
 <script src="/js/scroll.js"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+
 {{ template "_internal/google_analytics_async.html" . }}
 
-</script>
+<script src="/js/modal.js"></script>
+
 </body>
 </html>
