Minor tweaks to header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,9 +7,12 @@
 <header class="header">
   <div class="wrapper">
     <h1 class="logo-name">
-      <a class="logo-link" href="#" title="{{ .name }}" itemprop="name">{{ .name }}</a>
+        <a class="logo-link" href="#" title="{{ .name }}" itemprop="name">{{ .shortname }}</a><br>
+        <a class="logo-link" href="#" title="{{ .shortdescription }}" itemprop="name">{{ .shortdescription }}</a>
     </h1>
-    <h2 class="tagline">{{ .date }}, {{ .venue }}, {{ .city }}</h2>
+    <h2 class="tagline">{{ .date }}</h2>
+    <br>
+    <h2 class="tagline">{{ .venue }}, {{ .city }}</h2>
 
     <div class="call-action-area">
       {{ with .price }}
