--- a/static/css/main.css
+++ b/static/css/main.css
@@ -343,12 +343,12 @@ nav {
 }
 .logo-name {
   margin-bottom: 0;
-  font-size: 10em;
+  font-size: 7em;
   letter-spacing: -0.04em;
 }
 .tagline {
-  margin-bottom: 50px;
-  font-size: 2em;
+  margin-bottom: 15px;
+  font-size: 50px;
   letter-spacing: -0.02em;
 }
 .call-action-area .price {
