Prep work for results

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,8 +7,8 @@
 <header class="header">
   <div class="wrapper">
     <h1 class="logo-name">
-        <a class="logo-link" href="#" title="{{ .name }}" itemprop="name">{{ .shortname }}</a><br>
-        <a class="logo-link" href="#" title="{{ .shortdescription }}" itemprop="name">{{ .shortdescription }}</a>
+        <a class="logo-link" href="/" title="{{ .name }}" itemprop="name">{{ .shortname }}</a><br>
+        <a class="logo-link" href="/" title="{{ .shortdescription }}" itemprop="name">{{ .shortdescription }}</a>
     </h1>
     <h2 class="tagline">{{ .date }}</h2>
     <br>
