--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -6,6 +6,8 @@
 
 <script src="/js/scroll.js"></script>
 
+<script src="/js/expandable.js"></script>
+
 <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 
 {{ template "_internal/google_analytics_async.html" . }}
