Adding table sorting

--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -4,6 +4,13 @@
 <script src="/js/map.js"></script>
 {{ end }}
 
+<script src="/js/stupidtable.js"></script>
+<script>
+ $(function(){
+   $("table").stupidtable();
+  });
+</script>
+
 <script src="/js/scroll.js"></script>
 
 <script src="/js/expandable.js"></script>
