--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,14 @@
   text-decoration: none;
 }
 
+th[data-sort]{
+      cursor:pointer;
+}
+
+.expand {
+  cursor:pointer;
+}
+
 .expandable {
     display:none;
 }
