--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/form.css">
+  <link rel="stylesheet" type="text/css" href="/css/font.css">
 
   <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
