Minor switching around of fonts

--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -15,7 +15,7 @@
 
 <script src="/js/expandable.js"></script>
 
-<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+{{ partial "fonts.html" . }}
 
 {{ template "_internal/google_analytics_async.html" . }}
 
