--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -9,11 +9,12 @@
 <div id="map-canvas" class="location-area" data-address="{{ .address }}, {{ .city }} - {{ .state }}"></div>
 <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ .Site.Params.GoogleMapsAPIKey }}&callback=initMap"></script>-->
 
-{{ if isset . "airbnbevent" }}
+
+{{ with .airbnbevent }}
   <br>
   <ul>
     <p>
-      Need somewhere to stay? Try <a href={{ printf "https://www.airbnb.com/events/%s" (.airbnbevent) }} name="Airbnb link" itemprop="url" target="_blank">Airbnb</a>.
+      {{ .text }} <a href="https://www.airbnb.com/events/{{ .link }}" name="Airbnb link" itemprop="url" target="_blank">Airbnb</a>.
     </p>
   </ul>
 {{ end }}
