--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  {{ .Hugo.Generator }}
+  {{ hugo.Generator }}
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
 
@@ -23,7 +23,10 @@
 
   <script src="https://use.fontawesome.com/165033574b.js"></script>
 
+  {{ partial "gtm_header.html" . }}
+
 </head>
 <body>
+  {{ partial "gtm_body.html" . }}
   <div class="global">
 
