Minor update to a couple of partials

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,9 +1,9 @@
 <h2 class="section-title">{{ .titles.about }}</h2>
 
 <ul class="about-list">
-    {{ range $about_text := .about }}
+    {{ range .about }}
     <p>
-      {{ .text }}
+      {{ . }}
     </p>
     {{ end }}
 </ul>
