--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,19 @@
     {{ with .date }}
     <div itemprop="startDate" style="display: none;">{{ .start }}</div>
     <div itemprop="endDate" style="display: none;">{{ .end }}</div>
-    <h2 class="tagline">{{ dateFormat "Jan 2" .start }} - {{ dateFormat "Jan 2 2006" .end }}</h2>
+    <h2 class="tagline">
+
+    {{ if eq (dateFormat "Jan 2" .start) (dateFormat "Jan 2" .end) }}
+
+    {{ dateFormat "Jan 2 2006" .start }}
+
+    {{ else }}
+
+    {{ dateFormat "Jan 2" .start }} - {{ dateFormat "Jan 2 2006" .end }}
+
+    {{ end }}
+
+    </h2>
     {{ end }}
     <br>
     <h2 class="tagline">{{ .venue }}, {{ .city }} {{ .state }}</h2>
